argocd/memowithtags-prod/memowithtags-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memowithtags-server
  labels:
    app: memowithtags-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memowithtags-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: memowithtags-server
    spec:
      serviceAccountName: memowithtags
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/memowithtags-prod/memowithtags-server:5
          name: memowithtags-server
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 512Mi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: memowithtags-server
spec:
  type: ClusterIP
  selector:
    app: memowithtags-server
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: memowithtags-server
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - memowithtags-api.wafflestudio.com
  http:
    - route:
        - destination:
            host: memowithtags-server
